--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn format", "yarn test --bail"
+      "yarn format",
+      "yarn test --findRelatedTests --bail"
     ]
   },
   "dependencies": {
-    "next": "12.3.1",
+    "next": "^12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -32,9 +34,11 @@
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "babel-jest": "^29.1.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
