--- a/package.json
+++ b/package.json
@@ -40,17 +40,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.3",
-    "@types/node": "18.11.10",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.0",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
@@ -61,7 +61,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.0.4",
-    "prettier": "2.8.0",
-    "typescript": "4.9.3"
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4"
   }
 }
